DeGAS/src/ASGMTParser.py
# Generated from ASGMT.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
import torch
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class ASGMTParser(Parser):
    grammarFileName = "ASGMT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'='",
        "'+'",
        "'*'",
        "'['",
        "']'",
        "'gm('",
        "','",
        "')'",
        "'-'",
        "'_'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "IDV",
        "NUM",
        "COMM",
        "WS",
        "DIGIT",
    ]

    RULE_assignment = 0
    RULE_add = 1
    RULE_add_term = 2
    RULE_term = 3
    RULE_symvars = 4
    RULE_idd = 5
    RULE_gm = 6
    RULE_list = 7
    RULE_sub = 8
    RULE_par = 9

    ruleNames = [
        "assignment",
        "add",
        "add_term",
        "term",
        "symvars",
        "idd",
        "gm",
        "list",
        "sub",
        "par",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    IDV = 11
    NUM = 12
    COMM = 13
    WS = 14
    DIGIT = 15

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class AssignmentContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symvars(self):
            return self.getTypedRuleContext(ASGMTParser.SymvarsContext, 0)

        def add(self):
            return self.getTypedRuleContext(ASGMTParser.AddContext, 0)

        def getRuleIndex(self):
            return ASGMTParser.RULE_assignment

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAssignment"):
                listener.enterAssignment(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAssignment"):
                listener.exitAssignment(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAssignment"):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)

    def assignment(self):
        localctx = ASGMTParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.symvars()
            self.state = 21
            self.match(ASGMTParser.T__0)
            self.state = 22
            self.add()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AddContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def add_term(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ASGMTParser.Add_termContext)
            else:
                return self.getTypedRuleContext(ASGMTParser.Add_termContext, i)

        def getRuleIndex(self):
            return ASGMTParser.RULE_add

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAdd"):
                listener.enterAdd(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAdd"):
                listener.exitAdd(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAdd"):
                return visitor.visitAdd(self)
            else:
                return visitor.visitChildren(self)

    def add(self):
        localctx = ASGMTParser.AddContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_add)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.add_term()
            self.state = 31
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 1, self._ctx)
            while _alt != 1 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1 + 1:
                    self.state = 26
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la == ASGMTParser.T__1:
                        self.state = 25
                        self.match(ASGMTParser.T__1)

                    self.state = 28
                    self.add_term()
                self.state = 33
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 1, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Add_termContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ASGMTParser.TermContext)
            else:
                return self.getTypedRuleContext(ASGMTParser.TermContext, i)

        def getRuleIndex(self):
            return ASGMTParser.RULE_add_term

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAdd_term"):
                listener.enterAdd_term(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAdd_term"):
                listener.exitAdd_term(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAdd_term"):
                return visitor.visitAdd_term(self)
            else:
                return visitor.visitChildren(self)

    def add_term(self):
        localctx = ASGMTParser.Add_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_add_term)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
            if la_ == 1:
                self.state = 34
                self.term()
                self.state = 35
                self.match(ASGMTParser.T__2)

            self.state = 39
            self.term()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TermContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(ASGMTParser.NUM, 0)

        def par(self):
            return self.getTypedRuleContext(ASGMTParser.ParContext, 0)

        def sub(self):
            return self.getTypedRuleContext(ASGMTParser.SubContext, 0)

        def symvars(self):
            return self.getTypedRuleContext(ASGMTParser.SymvarsContext, 0)

        def gm(self):
            return self.getTypedRuleContext(ASGMTParser.GmContext, 0)

        def getRuleIndex(self):
            return ASGMTParser.RULE_term

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTerm"):
                listener.enterTerm(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTerm"):
                listener.exitTerm(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitTerm"):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)

        def is_var(self, data):
            """Returns 1 if term is a variable, 0 if it's a constant"""
            if self.NUM() is not None:
                return False
            if self.par() is not None:
                return False
            elif self.symvars() is not None:
                if self.symvars().IDV() is not None:
                    return True
                elif self.symvars().idd() is not None:
                    if self.symvars().idd().is_data(data):
                        return False
                    else:
                        return True
            elif self.gm() is not None:
                return True

        def is_const(self, data):
            return not self.is_var(data)

        def getValue(self, data, params_dict):
            if self.is_const(data):
                if self.NUM() is not None:
                    return float(self.NUM().getText())
                elif self.symvars() is not None:
                    return self.symvars().idd().getValue(data)
                elif self.par() is not None:
                    return self.par().getValue(params_dict)
            else:
                raise ("Calling getValue for a variable")

    def term(self):
        localctx = ASGMTParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_term)
        self._la = 0  # Token type
        try:
            self.state = 54
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 6, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.match(ASGMTParser.NUM)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == ASGMTParser.T__8:
                    self.state = 42
                    self.sub()

                self.state = 45
                self.par()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == ASGMTParser.T__8:
                    self.state = 46
                    self.sub()

                self.state = 49
                self.symvars()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == ASGMTParser.T__8:
                    self.state = 50
                    self.sub()

                self.state = 53
                self.gm()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SymvarsContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDV(self):
            return self.getToken(ASGMTParser.IDV, 0)

        def idd(self):
            return self.getTypedRuleContext(ASGMTParser.IddContext, 0)

        def getRuleIndex(self):
            return ASGMTParser.RULE_symvars

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSymvars"):
                listener.enterSymvars(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSymvars"):
                listener.exitSymvars(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSymvars"):
                return visitor.visitSymvars(self)
            else:
                return visitor.visitChildren(self)

        def getVar(self, data):
            if self.idd() is None:
                return self.getText()
            else:
                if self.idd().IDV(1) is None:
                    return self.getText()
                else:
                    data_idx = int(data[self.idd().IDV(1).getText()][0].item())
                return self.idd().IDV(0).getText() + "[" + str(data_idx) + "]"

    def symvars(self):
        localctx = ASGMTParser.SymvarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_symvars)
        try:
            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 7, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.match(ASGMTParser.IDV)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.idd()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IddContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDV(self, i: int = None):
            if i is None:
                return self.getTokens(ASGMTParser.IDV)
            else:
                return self.getToken(ASGMTParser.IDV, i)

        def NUM(self):
            return self.getToken(ASGMTParser.NUM, 0)

        def getRuleIndex(self):
            return ASGMTParser.RULE_idd

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterIdd"):
                listener.enterIdd(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitIdd"):
                listener.exitIdd(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitIdd"):
                return visitor.visitIdd(self)
            else:
                return visitor.visitChildren(self)

        def is_data(self, data):
            if self.IDV(0).getText() in data.keys():
                return True
            else:
                return False

        def getValue(self, data):
            data_name = self.IDV(0).getText()
            if self.NUM() is not None:
                data_idx = int(self.NUM().getText())
            elif self.IDV(1) is not None:
                data_idx = int(data[self.IDV(1).getText()][0].item())
            return data[data_name][data_idx]

    def idd(self):
        localctx = ASGMTParser.IddContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_idd)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(ASGMTParser.IDV)
            self.state = 61
            self.match(ASGMTParser.T__3)
            self.state = 62
            _la = self._input.LA(1)
            if not (_la == ASGMTParser.IDV or _la == ASGMTParser.NUM):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 63
            self.match(ASGMTParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GmContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ASGMTParser.ListContext)
            else:
                return self.getTypedRuleContext(ASGMTParser.ListContext, i)

        def getRuleIndex(self):
            return ASGMTParser.RULE_gm

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterGm"):
                listener.enterGm(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitGm"):
                listener.exitGm(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitGm"):
                return visitor.visitGm(self)
            else:
                return visitor.visitChildren(self)

    def gm(self):
        localctx = ASGMTParser.GmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_gm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(ASGMTParser.T__5)
            self.state = 66
            self.list_()
            self.state = 67
            self.match(ASGMTParser.T__6)
            self.state = 68
            self.list_()
            self.state = 69
            self.match(ASGMTParser.T__6)
            self.state = 70
            self.list_()
            self.state = 71
            self.match(ASGMTParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i: int = None):
            if i is None:
                return self.getTokens(ASGMTParser.NUM)
            else:
                return self.getToken(ASGMTParser.NUM, i)

        def par(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ASGMTParser.ParContext)
            else:
                return self.getTypedRuleContext(ASGMTParser.ParContext, i)

        def getRuleIndex(self):
            return ASGMTParser.RULE_list

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterList"):
                listener.enterList(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitList"):
                listener.exitList(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitList"):
                return visitor.visitList(self)
            else:
                return visitor.visitChildren(self)

        def unpack(self, params_dict):
            str_list = self.getText()[1:-1].split(",")
            unpacked = torch.zeros(len(str_list))
            for i, elem in enumerate(str_list):
                if elem[0] == "_":
                    unpacked[i] = params_dict[elem[1:]]
                else:
                    unpacked[i] = float(elem)
            return unpacked

    def list_(self):
        localctx = ASGMTParser.ListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(ASGMTParser.T__3)
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ASGMTParser.NUM]:
                self.state = 74
                self.match(ASGMTParser.NUM)
                pass
            elif token in [ASGMTParser.T__9]:
                self.state = 75
                self.par()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 85
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 10, self._ctx)
            while _alt != 1 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1 + 1:
                    self.state = 78
                    self.match(ASGMTParser.T__6)
                    self.state = 81
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [ASGMTParser.NUM]:
                        self.state = 79
                        self.match(ASGMTParser.NUM)
                        pass
                    elif token in [ASGMTParser.T__9]:
                        self.state = 80
                        self.par()
                        pass
                    else:
                        raise NoViableAltException(self)

                self.state = 87
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 10, self._ctx)

            self.state = 88
            self.match(ASGMTParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return ASGMTParser.RULE_sub

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSub"):
                listener.enterSub(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSub"):
                listener.exitSub(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSub"):
                return visitor.visitSub(self)
            else:
                return visitor.visitChildren(self)

    def sub(self):
        localctx = ASGMTParser.SubContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_sub)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(ASGMTParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDV(self):
            return self.getToken(ASGMTParser.IDV, 0)

        def getRuleIndex(self):
            return ASGMTParser.RULE_par

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPar"):
                listener.enterPar(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPar"):
                listener.exitPar(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPar"):
                return visitor.visitPar(self)
            else:
                return visitor.visitChildren(self)

        def getValue(self, params_dict):
            name = self.getText()
            name = name[1:]
            return params_dict[name]

    def par(self):
        localctx = ASGMTParser.ParContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_par)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(ASGMTParser.T__9)
            self.state = 93
            self.match(ASGMTParser.IDV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
